# shang

./: fstab  yum.txt
1.zhang/: mount.sh
1.zhang/3.datastruct/: index.txt
2.celery/mycoder80/: taskpool.c
3.ybx/1.c/: 49.stack_heap  50.big_endian_and_little_endian  66.stack_heap.c  67.big_endian_and_little_endian  67.big_endian_and_little_endian.c
3.ybx/1.c/75.autotools/1.example/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  hello.cpp  hello.h
3.ybx/1.c/75.autotools/1.example/.deps/: hello.Po
3.ybx/1.c/75.autotools/1.example/autom4te.cache/: output.0  traces.0  traces.1
3.ybx/1.c/75.autotools/2.example/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  hello  main.c
3.ybx/1.c/75.autotools/2.example/.deps/: main.Po
3.ybx/1.c/75.autotools/2.example/autom4te.cache/: output.0  output.1  traces.0  traces.1
3.ybx/1.c/75.autotools/2.example/include/: common.h  get.h  sum.h  val.h
3.ybx/1.c/75.autotools/2.example/src/: Makefile  Makefile.am  Makefile.in  get.c  sum.c  val.c
3.ybx/1.c/75.autotools/2.example/src/.deps/: get.Po  sum.Po  val.Po
3.ybx/11.DSAAC/: binheap.c  binheap.h  testheap  testheap.c
3.ybx/15.memcached/: 3.memcached_cas.txt
3.ybx/17.apue3/: Makefile
3.ybx/19.exercise/: 0.divisor.c  1.int_to_string  1.int_to_string.c  2.fibonacci.c  makefile
3.ybx/21.gdb_basic/: 3.gdb_server.c  4.gdb_thread.c  7.core_dump.c  index.txt  makefile
3.ybx/3.apue/: index7_8.txt  index_3_4_5.txt  map.txt
3.ybx/6.unp1/: Make.defines  config.h  unp.h
3.ybx/9.libevent/: index.txt
c/: 1.c  a.out
c/day01/: .note1.txt.swp  a.out  bit.c  comma  comma.c  enum.c  hello.c  if.c  note1.txt  printf.c  printf.i  row_buffer.c  scanf.c  sm.c  type.c  type1.c  type2  var.c
c/day02/: 1  a.out  change.c  ex1.c  ex3.c  ex4.c  ex5.c  for.c  forfor.c  getchar.c  homework.txt  operator.c  primer2.c  switch.c  value.c  wc.c  while.c
c/day03/: .cal.c.swp  1.c  a.out  array.c  cal.c  charact_cnt.c  coin.c  color.c  dec_bin.c  do_while.c  ex1.php  ex2.c  ex_jinzhi.c  ex_num.c  test.c  yue.c
c/day04/: a.out  fun.c  josefu.c  my_pointer.c
c/day05/: .print_bit.c.swp  a.out  hannoi.c  index.txt  print_bit.c  set_clear.c
c/day06/: .const.c.swp  .miniprintf.c.swp  .sum.c.swp  1.c  a.out  char_arr.c  const.c  duan.c  index.txt  itoa.c  miniprintf.c  mystrcmp.c  mystrlen.c  static.c
c/day07/: .arr_mul.c.swp  .main.c.swp  .max_string.c.swp  .mystrchr.c.swp  a.out  arr_mul.c  game.c  malloc.c  max_string.c  mystrchr.c  operator.c  point.c
c/day08/: .homework.txt.swp  a.out  alarm.c  arrarr.c  connect.c  exercise.c  fun_point.c  index.txt  my_exercise.c  my_malloc.c  sig_int.c  size1.c  (+4 more)
datastruct/: index.txt
framebuffer/: Makefile  a.out  fb_draw.c
magic/: 1  2  2.doc  Doc1.doc  Makefile  main  tags
mycoder80/: a.out  todo.txt  write.c
woyingzhichang/: 1  1.c  a.out
(+3407 files in other folders)
